[package]
name = "hitest"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11.5"
clap = { version = "3", features = ["derive"] }
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5"
libparser = { path = "../libparser" }
nix = "0.24"
termcolor = "1.1"
thiserror = "2.0"
rand = "0.8.5"
